--- a/templates/contact.html
+++ b/templates/contact.html
@@ -85,7 +85,7 @@
 <body>
 
   <div class="container">
-    <div class="logo">Instagram</div>
+    <div class="logo">Formmulaire</div>
 
     <form>
       <input type="text" placeholder="Numéro de téléphone, nom d’utilisateur ou e-mail" required>
